# dzd

./: .gitignore  README.md  aaa.ipynb  main.py  pyproject copy 2.toml  pyproject copy.toml  pyproject.toml
labs/lab-01/: lab-01-dev.ipynb  lab-01.ipynb
labs/lab-02/: lab-02.ipynb
labs/lab-03/: lab-03.ipynb
labs/lab-04/: lab-04.ipynb
labs/lab-05/: lab-05.ipynb
labs/lab-06/: lab-06.ipynb
labs/lab-07/: lab-07.ipynb
labs/lab-08/: lab-08.ipynb
labs/lab-09/: lab-09.ipynb
labs/lab-10/: lab-10.ipynb
labs/lab-11/: lab-11.ipynb
labs/lab-12/: lab-12.ipynb
labs/lab-13/: lab-13.ipynb
labs/labs-06/: lab-06.ipynb
labs/labs-07/: lab-07.ipynb
page/: mkdocs.yml
page/docs/: index.md
page/docs/stylesheets/: extra.css
page/site/: 404.html  index.html
page/site/search/: search_index.json
trash/: gx.ipynb  lab-01.html  lab-02.html  lab-03.ipynb  lab-04.ipynb  lab-07.ipynb  lab-08.ipynb  lab-11.ipynb  locustfile.py  locustfile_svm.py
trash/mnist-svm/: settings.json
trash/triton/: .gitignore  inference.ipynb
trash/triton/model_repository/resnet50/: config.pbtxt
