[project]
name = "dzd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13a"
dependencies = [
    "datasets>=2.19.1",
    "great-expectations>=1.9.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mkdocs-material>=9.7.0",
    "netron>=8.7.5",
    "numpy>=2.3.3",
    "onnxscript>=0.5.6",
    "pandas>=2.3.3",
    "pandera>=0.27.0",
    "pointblank>=0.8.1",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tritonclient[http]>=2.41.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
