[project]
name = "dzd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mkdocs-material>=9.7.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "ucimlrepo>=0.0.7",
    "whylogs[viz]>=1.6.4",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
